force-app/main/default/objects/PARStage__mdt/PARStage__mdt.object-meta.xml
<CustomObject>
    <description>PAR Stages Dictionary</description>
    <label>PAR Stage</label>
    <pluralLabel>PAR Stages</pluralLabel>
</CustomObject>