force-app/main/default/objects/PARStage__mdt/fields/Code__c.field-meta.xml
<CustomField>
    <fullName>Code__c</fullName>
    <label>Code</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>