force-app/main/default/objects/PARStage__mdt/fields/IsApprovalRequired__c.field-meta.xml
<CustomField>
    <fullName>IsApprovalRequired__c</fullName>
    <label>Is Approval Required</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>