force-app/main/default/objects/PARStage__mdt/fields/ProcessName__c.field-meta.xml
<CustomField>
    <fullName>ProcessName__c</fullName>
    <label>Process Name</label>
    <type>Text</type>
    <length>255</length>
</CustomField>