force-app/main/default/objects/PARStage__mdt/fields/StageName__c.field-meta.xml
<CustomField>
    <fullName>StageName__c</fullName>
    <label>Stage Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>